--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,7 +72,7 @@ table{
 }
 
 .table-container{
-  width: 45rem;
+  width: 55rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -92,4 +92,8 @@ nav a{
 }
 .msg{
   margin: 20px;
+}
+
+.dontrender {
+  display: none;
 }
